# cpi-chain

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: cpic.rs  exchange.rs  lib.rs  oracle.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: setup.sh
src/: chain_spec.rs  main.rs  service.rs
