[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['cpi-chain-runtime/std']
[dependencies.cpi-chain-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'cpi-chain-runtime-wasm'
version = '1.0.0'
